# stereogram

./: Cargo.toml
resources/: display_config.rom
src/: main.rs  stereogram.rs
src/states/: game.rs  main_menu.rs  mod.rs
src/systems/: mod.rs
