[package]
name = "stereogram"
version = "0.1.0"
authors = ["Julien Hecht <jhecht@witekio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22"
structopt = "0.2"
rand = "0.7"
derive_builder = "0.7"
winit = "*"

[dependencies.amethyst]
version = "0.11"
features = ["vulkan"]


